--- a/project/apps/cliente/templates/cliente/index.html
+++ b/project/apps/cliente/templates/cliente/index.html
@@ -10,7 +10,7 @@
         <h2>{{ cliente.nombre }}</h2>
         <p>{{ cliente.apellido }}</p>
         <p>{{ cliente.nacimiento }}</p>
-        <p>{{ cliente.pais_origen_id }}</p>
+        <p>{{ cliente.lugar_de_entrega }}</p>
     {% endfor %}
 
     <a href="{% url 'Home:home' %}">Ir al menú principal</a>
