--- a/project/apps/cliente/templates/cliente/search.html
+++ b/project/apps/cliente/templates/cliente/search.html
@@ -18,7 +18,7 @@
     {% endfor %}
 
     <h2> Cliente país vacío </h2>
-    {% for cliente in clientes_pais %}
+    {% for cliente in cliente_lugar %}
         <p> {{ cliente }}</p>
     {% endfor %}
 
