--- a/project/apps/producto/templates/producto/producto_list.html
+++ b/project/apps/producto/templates/producto/producto_list.html
@@ -15,16 +15,17 @@
         </div>
 
         {% for object in object_list %}
-            <ul>
-                <li>{{ object.nombre }} ${{ object.precio }}
+        {% if user.is_staff %}
+            <li>{{ object.nombre }} ${{ object.precio }}
+                <a href="{% url 'producto:producto_update' object.id %}" class="btn btn-primary  btn-sm">
+                    Actualizar</a>
+                <a href="{% url 'producto:producto_delete' object.id %}" class="btn btn-danger  btn-sm">
+                    Eliminar</a>
+        {% endif %}                
                     <a href="{% url 'producto:producto_detail' object.id %}" class="btn btn-secondary btn-sm">
                         Ver detalle</a>
-                    <a href="{% url 'producto:producto_update' object.id %}" class="btn btn-primary  btn-sm">
-                        Actualizar</a>
-                    <a href="{% url 'producto:producto_delete' object.id %}" class="btn btn-danger  btn-sm">
-                        Eliminar</a>
-                </li>
-            </ul>
+            </li>
+
         {% endfor %}        
     {% else %}
         <p class="fs-4 fst-italic ">No hay registros ingresados</p>
