--- a/project/apps/venta/templates/venta/vendedor_list.html
+++ b/project/apps/venta/templates/venta/vendedor_list.html
@@ -8,14 +8,17 @@
     {% if object_list %}
 
         {% for object in object_list %}
-            <ul>
-                <li>{{ object.usuario }} | {{ object.celular }}
-                    <a href="{% url 'venta:vendedor_detail' object.id %}">Ver detalle</a>
-                    <a href="{% url 'venta:vendedor_update' object.id %}">Actualizar</a>
-                    <a href="{% url 'venta:vendedor_delete' object.id %}">Eliminar</a>
-                </li>
-            </ul>
-        {% endfor %}        
+        <ul>
+            <li>{{object.usuario}} | {{object.celular}}
+                <li>{% if user.is_staff %}
+
+                    <a href="{% url 'venta:vendedor_update' object.id %}" class="btn btn-primary  btn-sm">Actualizar</a>
+                    <a href="{% url 'venta:vendedor_delete' object.id %}" class="btn btn-danger  btn-sm">Eliminar</a>
+                {% endif %}
+                    <a href="{% url 'venta:vendedor_detail' object.id %}" class="btn btn-secondary btn-sm">Ver detalle</a>
+            </li>
+        </ul>
+        {% endfor %}      
     {% else %}
         <p>no hay elementos</p>
 
