--- a/project/apps/Home/templates/Home/card.html
+++ b/project/apps/Home/templates/Home/card.html
@@ -41,7 +41,12 @@
     <div class="card h-100">
         <div class="card-body">
             <h2 class="card-title">APA</h2>
-            <p class="card-text">Árbol de la familia de las salicáceas, que crece hasta 20 metro(s) de altura, con tronco grueso, derecho, de muchas ramas y ramillas péndulas. Tiene copa irregular, estrecha y clara, hojas angostas, lanceoladas, de margen poco aserrado, verdes por el haz y blancas y algo pelosas por el envés, flores sin cáliz ni corola, en amentos verdosos, y fruto capsular. Es común en las orillas de los ríos.</p>
+            <p>Color: Dorado a ámbar.</p>
+            <br>
+            <p>Claridad: Cerveza clara.</p>
+            <br>
+            <p>Espuma: Corona de tamaño medio a grande, con buena retención de color blanco a blanco roto.</p>
+            
         </div>
         <div class="card-footer"><a class="btn btn-dark  btn-sm" href="{% url 'Home:tipo4_card_detalle' %}">Ampliar</a></div>
     </div>
@@ -50,7 +55,11 @@
     <div class="card h-100">
         <div class="card-body">
             <h2 class="card-title">IPA</h2>
-            <p class="card-text">Árbol de la familia de las salicáceas, que crece hasta 20 metro(s) de altura, con tronco grueso, derecho, de muchas ramas y ramillas péndulas. Tiene copa irregular, estrecha y clara, hojas angostas, lanceoladas, de margen poco aserrado, verdes por el haz y blancas y algo pelosas por el envés, flores sin cáliz ni corola, en amentos verdosos, y fruto capsular. Es común en las orillas de los ríos.</p>
+            <p>Color: Dorado a cobrizo.</p>
+            <br>
+            <p>Claridad: Cerveza clara, si bien la turbidez es aceptable, especialmente a bajas temperaturas.</p>
+            <br>
+            <p>Espuma: Corona de tamaño medio, persistente de color blanco a blanco roto.</p>
         </div>
         <div class="card-footer"><a class="btn btn-dark  btn-sm" href="{% url 'Home:tipo5_card_detalle' %}">Ampliar</a></div>
     </div>
