--- a/project/apps/venta/templates/venta/venta_detail.html
+++ b/project/apps/venta/templates/venta/venta_detail.html
@@ -12,6 +12,8 @@
         <li>Cantidad: {{ object.cantidad }} </li>
         <li>Precio total: {{ object.precio_total }} </li>
         <li>Fecha venta: {{ object.fecha_venta }} </li>
+        <li>Cliente : {{ object.cliente }} </li>
+
 
     </ul>
     
